infra/k8s-prod/expiration-depl.yaml
# Expiration service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration-depl
  namespace: pashkoostap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-expiration
  template:
    metadata:
      labels:
        app: ticketing-expiration
    spec:
      containers:
        - name: ticketing-expiration
          image: pashkoostap/ticketing-expiration
          resources:
            limits:
              cpu: 100m
              memory: 250Mi
            requests:
              cpu: 10m
              memory: 125Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration-redis-depl
  namespace: pashkoostap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-expiration-redis
  template:
    metadata:
      labels:
        app: ticketing-expiration-redis
    spec:
      containers:
        - name: ticketing-expiration-redis
          image: redis
          resources:
            limits:
              cpu: 100m
              memory: 250Mi
            requests:
              cpu: 10m
              memory: 125Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-expiration-redis-srv
  namespace: pashkoostap
spec:
  selector:
    app: ticketing-expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
