infra/k8s-prod/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-nats-depl
  namespace: pashkoostap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-nats
  template:
    metadata:
      labels:
        app: ticketing-nats
    spec:
      containers:
        - name: ticketing-nats
          image: nats-streaming:0.17.0
          args:
            [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'ticketing-nats',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-nats-srv
  namespace: pashkoostap
spec:
  selector:
    app: ticketing-nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
