infra/k8s-prod/orders-depl.yaml
# Orders service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders
  template:
    metadata:
      labels:
        app: ticketing-orders
    spec:
      containers:
        - name: ticketing-orders
          # image: us.gcr.io/ticketing-dev-id/orders
          image: pashkoostap/ticketing-orders
          resources:
            limits:
              cpu: 100m
              memory: 250Mi
            requests:
              cpu: 10m
              memory: 125Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-srv
spec:
  selector:
    app: ticketing-orders
  ports:
    - name: ticketing-orders
      protocol: TCP
      port: 4000
      targetPort: 4000
# Orders mongo DB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders-mongo
  template:
    metadata:
      labels:
        app: ticketing-orders-mongo
    spec:
      containers:
        - name: ticketing-orders-mongo
          image: mongo
          resources:
            limits:
              cpu: 100m
              memory: 250Mi
            requests:
              cpu: 10m
              memory: 125Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-mongo-srv
spec:
  selector:
    app: ticketing-orders-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
