infra/k8s-prod/tickets-depl.yaml
# Tickets service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets
  template:
    metadata:
      labels:
        app: ticketing-tickets
    spec:
      containers:
        - name: ticketing-tickets
          # image: us.gcr.io/ticketing-dev-id/tickets
          image: pashkoostap/ticketing-tickets
          resources:
            limits:
              cpu: 350m
              memory: 700Mi
            requests:
              cpu: 10m
              memory: 125Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-srv
spec:
  selector:
    app: ticketing-tickets
  ports:
    - name: ticketing-tickets
      protocol: TCP
      port: 4000
      targetPort: 4000
# Tickets mongo DB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets-mongo
  template:
    metadata:
      labels:
        app: ticketing-tickets-mongo
    spec:
      containers:
        - name: ticketing-tickets-mongo
          image: mongo
          resources:
            limits:
              cpu: 350m
              memory: 700Mi
            requests:
              cpu: 10m
              memory: 125Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-mongo-srv
spec:
  selector:
    app: ticketing-tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
